index.css
:root {
    color-scheme: dark;
}

html {
    font-family: "Segoe UI", sans-serif;
    font-weight: 600;

    height: 100vh;
    width: 100vw;
}

body {
    /* Layout */
    --sidebar-width: 400px;
    --sidebar-margin: 14px;
    --sidebar-icon-size: 1.2rem;
    --sidebar-column-gap: 20px;

    /* Widget styling */
    --widget-active-opacity: 0.8;
    --widget-color-bg: var(--bg-sidebar);
    --widget-color-bg-hover: rgb(82, 82, 82);
    --widget-radius: 4px;

    /* Colors */
    --bg-sidebar: rgb(35, 41, 41);

    --text-normal: rgb(168, 177, 187);
    --text-light: rgb(201, 209, 217);
    --text-hover: rgb(234, 243, 252);

    --panel-hover: rgba(255, 255, 255, 0.2);

    --light-grey: rgb(201, 209, 217);
    --dark-grey: rgb(139, 148, 158);
    --almost-white: rgb(234, 243, 252);

    --sidebar-grabber-hover: rgb(123, 123, 123);

    display: block;
    height: 100%;
    width: 100%;
    margin: 0;
}

.map {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: var(--sidebar-width);
    background-color: #051110;

    /* HACK: Placeholder map while live map is disabled */
    background-image: url(http://127.0.0.1:5000/static/minimap/indar.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: 60%;
    -webkit-user-select: none;
    user-select: none;
}

.sidebar {
    position: fixed;
    height: 100%;
    width: var(--sidebar-width);
    background-color: var(--bg-sidebar);
    color: var(--text-normal);
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    font-size: 10pt;
}

.sidebar-grabber {
    position: absolute;
    top: 0;
    bottom: 0;
    left: var(--sidebar-width);
    width: 4px;
    cursor: ew-resize;
    -webkit-user-select: none;
    user-select: none;
    transition: background-color 0s linear 0.1s;
}

.sidebar-grabber:hover {
    background-color: var(--sidebar-grabber-hover);
}

.sidebar-scroll {
    padding-top: var(--sidebar-margin);
    padding-left: var(--sidebar-margin);
    padding-right: var(--sidebar-margin);
    overflow-y: scroll;
    flex: 1;
}

.logo {
    display: block;
    cursor: pointer;
    color: var(--text-light);
    font-size: 12pt;
    text-decoration: none;
    -webkit-user-select: none;
    user-select: none;
}

.logo:hover {
    border-radius: var(--widget-radius);
    background-color: var(--widget-color-bg-hover);
}

.logo>img {
    width: 100%;
}

.logo>span {
    display: block;
    text-align: center;
    margin-top: -10px;
    padding-bottom: 10px;
}

.sidebar h4 {
    color: var(--text-light);
    font-size: 12pt;
    display: grid;
    grid-template-columns: minmax(50px, 1fr) auto minmax(50px, 1fr);
    align-items: center;
    text-align: center;
    gap: var(--sidebar-margin);
}

.sidebar h4::before,
.sidebar h4::after {
    content: "";
    margin-top: 4px;
    border-top: 1px solid var(--text-normal);
}

.placeholder {
    color: #ffdd99;
    text-align: center;
}

.map-selector {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: var(--sidebar-column-gap);
    row-gap: 8px;
}

.map-selector>.button {
    margin-left: auto;
}

.button {
    border-radius: var(--widget-radius);
    color: var(--text-light);
    padding: 4px 16px 8px 16px;
    background-color: var(--widget-color-bg);
    font-size: 12pt;
    -webkit-user-select: none;
    user-select: none;
}

.button:hover {
    background-color: var(--widget-color-bg-hover);
    color: var(--text-hover);
}

.button:active {
    opacity: var(--widget-active-opacity);
}

.grid-col-2 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: var(--sidebar-column-gap);
}

.layer-toggle {
    position: relative;
    border-radius: var(--widget-radius);
    padding: 4px 8px 4px calc(8px + var(--sidebar-icon-size));
    font-size: 12pt;
    color: var(--text-light);
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

.layer-toggle:not([data-active]) {
    text-decoration: line-through;
}

.layer-toggle:not([data-disabled]):hover {
    background-color: var(--widget-color-bg-hover);
    color: var(--text-hover);
    opacity: 1;
}

.layer-toggle:not([data-disabled]):active {
    opacity: var(--widget-active-opacity);
}

.layer-toggle[data-disabled] {
    opacity: 0.6;
    cursor: not-allowed;
}

.layer-toggle[data-active]::before {
    position: absolute;
    content: "✓";
    left: 8px;
}

.tool-button {
    position: relative;
    padding: 4px 8px 4px calc(8px + var(--sidebar-icon-size));
    font-size: 12pt;
    color: var(--text-light);
    border-radius: var(--widget-radius);
    font-size: 12pt;
    -webkit-user-select: none;
    user-select: none;
}

.tool-button:hover {
    background-color: var(--widget-color-bg-hover);
    color: var(--text-hover);
}

.tool-button:active {
    opacity: var(--widget-active-opacity);
}

.tool-button[data-active]::before {
    position: absolute;
    content: "⯈";
    left: 8px;
}

.settings-form {
    display: grid;
    grid-template-columns: 4fr 1fr;
    font-size: 11pt;
    row-gap: 4px;
    color: var(--text-light);
}

.settings-form>label:hover {
    color: var(--text-hover);
}

.settings-form>input {
    border: 0;
    padding: 2px 8px;
    width: 100%;
    border-radius: var(--widget-radius);
    background-color: var(--widget-color-bg);
    color: var(--text-light);
    font-size: 12pt;
    -webkit-user-select: none;
    user-select: none;
}

.settings-form>input:hover {
    background-color: var(--widget-color-bg-hover);
    color: var(--text-hover);
}

summary {
    color: var(--text-light);
    font-size: 12pt;
    margin-bottom: 10px;
    cursor: default;
    -webkit-user-select: none;
    user-select: none;
}

footer {
    border-top: 1px solid var(--text-normal);
    flex-basis: content;
    text-align: center;
}

footer>p {
    font-size: 8pt;
}

